--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Key Shop</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <nav>
+                <div class="logo">
+                    <a href="">Key Shop</a>
+                </div>
+                <div class="menu-link">
+                    <a href="">sign in</a>
+                </div>
+            </nav>
+            <div class="header-info">
+                <h3>this is h3 <br> for <br> key shop</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis tempore accusamus dolore, ab dolorem earum optio in unde. Beatae voluptatibus saepe autem, id ipsum explicabo fuga. Ratione sit alias natus.</p>
+                <div class="header-btn">
+                    <form action="" method="post">
+                        <input type="text" placeholder="enter your email">
+                        <button type="submit">
+                            contact us
+                        </button>
+                    </form>           
+                </div>
+            </div>
+        </div>
+    </header>
+
 </body>
 </html>
