--- a/index.html
+++ b/index.html
@@ -33,5 +33,16 @@
         </div>
     </header>
 
+    <section class="about">
+        <div class="container">
+            <div class="about-con">
+                <div class="about-title">key shop title</div>
+            <div class="about-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque porro velit, molestias in adipisci odio aliquid corrupti recusandae maxime earum facilis ut et rerum libero non blanditiis expedita. Aperiam, rerum.</div>
+            <div class="about-img"><img width="100%" src="https://images.unsplash.com/photo-1602847192466-7b4b641cd986?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1175&q=80" alt=""></div>
+            </div>
+        </div>
+    </section>
+
+   
 </body>
 </html>
