--- a/index.html
+++ b/index.html
@@ -105,5 +105,42 @@
             </div>
         </div>
     </section>
+
+    <section class="clients">
+        <div class="container">
+            <div class="clients-title">
+                <h3>what our clients want to say</h3>
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id voluptatibus quas facere possimus atque, quaerat quisquam ipsam? Excepturi, quam a.</p>
+
+            </div>
+            <div class="clients-grid">
+                <div class="clients-box">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis odit voluptates, omnis nam mollitia veritatis corrupti recusandae et tenetur quibusdam repellendus, possimus reiciendis harum, expedita nisi a rerum! Illum, odit!</p>
+                    <div class="clients-img">
+                        <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
+                        <p>john doe</p>
+                    </div>
+                </div>
+
+                <div class="clients-box">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis odit voluptates, omnis nam mollitia veritatis corrupti recusandae et tenetur quibusdam repellendus, possimus reiciendis harum, expedita nisi a rerum! Illum, odit!</p>
+                    <div class="clients-img">
+                        <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
+                        <p>john doe</p>
+                    </div>
+                </div>
+
+                <div class="clients-box">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis odit voluptates, omnis nam mollitia veritatis corrupti recusandae et tenetur quibusdam repellendus, possimus reiciendis harum, expedita nisi a rerum! Illum, odit!</p>
+                    <div class="clients-img">
+                        <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
+                        <p>john doe</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
 </body>
 </html>
