--- a/index.html
+++ b/index.html
@@ -141,6 +141,21 @@
         </div>
     </section>
 
-    
+    <section class="newsletter">
+        <div class="container">
+            <div class="newsletter-title">
+                <div>
+                    <h3>Don't forget to sign up for our newsletter</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, natus.</p>
+                    <br>
+                    <br>
+                    <form action="" method="post">
+                        <input type="email" placeholder="enter your email address">
+                        <button type="submit">Sign up now</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
