--- a/index.html
+++ b/index.html
@@ -157,5 +157,21 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="footer-menu">
+                 <ul>
+                    <li><a href="#">about</a></li>
+                    <li><a href="#">contact</a></li>
+                    <li><a href="#">privacy & policy</a></li>
+                    <li><a href="#">terms</a></li>
+                 </ul>
+                 <div class="footer-logo">
+                    <a href="#">key shop</a>
+                 </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
